# django-api-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yaml  zizmor.yaml
hooks/: post_gen_project.py  pre_gen_project.py
plans/: 001-admin-add-user-email.md  001-api-auth-token.md  001-backup-integrity-and-tests.md  001-coverage-gate-integrity.md  001-fix-bake-matrix-regressions.md  001-gitleaks-secret-scanner.md  001-postgres-backup-hardening.md  001-postgres-in-tests.md  002-behind-proxy-knob.md  002-default-auto-field-and-migration-gate.md  002-hook-email-validation.md  002-postgres-restore-runbook.md  002-prod-deploy-hardening.md  002-token-auth-inactive-users.md  002-trusted-client-ip-throttling.md  002-use-cors.md  003-api-throttling.md  003-backup-script-hardening.md  003-custom-user-model.md  003-default-from-email.md  003-deploy-hardening-image-ref-and-worker-drain.md  003-openapi-schema-export.md  003-prune-celery-skill.md  003-readiness-boundary.md  004-api-auth-knob-spike.md  004-consistency-sweep.md  004-deploy-hardening.md  004-gitleaks-secret-scanner.md  004-graceful-shutdown.md  004-jwt-operational-hygiene.md  004-pagination-bounds.md  004-use-csp.md  005-ci-tests-shipped-prod-compose.md  005-consistency-docs-sweep.md  005-docker-socket-proxy.md  005-fast-local-format-gate.md  005-notes-ninja-extra-controllers.md  005-test-suite-hygiene.md  005-tomllib-project-metadata.md  006-api-celery-polish.md  (+91 more)
scripts/: __init__.py  check_dockerfile_prod_env.py  check_generated_format.py  (+5 more)
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  SECURITY.md  manage.py  pyproject.toml  skills-lock.json
{{cookiecutter.project_slug}}/.agents/: README.md
{{cookiecutter.project_slug}}/.agents/skills/django-access-review/: LICENSE
{{cookiecutter.project_slug}}/.agents/skills/django-safe-migration/: SKILL.md
{{cookiecutter.project_slug}}/.agents/skills/django-safe-migration/references/: examples.md  operation-guide.md  postgres-locks.md
{{cookiecutter.project_slug}}/.agents/skills/new-api-resource/: SKILL.md
{{cookiecutter.project_slug}}/.docker/: Dockerfile  Dockerfile.dockerignore  traefik-dynamic.yaml
{{cookiecutter.project_slug}}/.docker/compose/: ci-services.yaml  dev.yaml  prod.yaml
{{cookiecutter.project_slug}}/.docker/scripts/: celery-beat.sh  celery-worker.sh  deploy.sh  dev.sh  gunicorn.sh  manage.sh  media-backup.sh  migrations.sh  postgres-backup.sh  postgres-restore.sh  worker.sh
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/scripts/: deploy-check.sh  docker-smoke.sh  migrations-check.sh
{{cookiecutter.project_slug}}/.github/workflows/: dependency-audit.yaml  deploy-check.yaml  deployment-checks.yaml  docker-build.yaml  docker-checks.yaml  migration-checks.yaml  migrations-check.yaml  migrations.yaml  openapi-schema-export.yaml  pre-commit.yaml  release.yaml  tests.yaml
{{cookiecutter.project_slug}}/src/apps/api/: api.py  apps.py  auth.py  docs.py  exceptions.py  pagination.py  signals.py  throttling.py
{{cookiecutter.project_slug}}/src/apps/api/management/commands/: export_openapi_schema.py
{{cookiecutter.project_slug}}/src/apps/api/routes/: __init__.py  health.py  ready.py
{{cookiecutter.project_slug}}/src/apps/api/schemas/: __init__.py  error.py  errors.py  health.py  ready.py
{{cookiecutter.project_slug}}/src/apps/core/: admin.py  controllers.py  models.py  schemas.py  tasks.py
{{cookiecutter.project_slug}}/src/apps/core/migrations/: 0001_initial.py  0002_token.py  0003_token_revoked_at.py
{{cookiecutter.project_slug}}/src/apps/notes/: admin.py  controllers.py  models.py  routes.py  schemas.py
{{cookiecutter.project_slug}}/src/apps/notes/migrations/: 0001_initial.py  0002_note_notes_note_owner_i_b6b830_idx.py
{{cookiecutter.project_slug}}/src/config/: __init__.py  celery.py  pyproject.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/src/config/settings/: __init__.py
{{cookiecutter.project_slug}}/src/config/settings/components/: apps.py  authentication.py  cache.py  celery.py  checks.py  core.py  cors.py  csp.py  database.py  email.py  jwt.py  logging.py  middleware.py  permissions_policy.py  sentry.py  storage.py  throttling.py
{{cookiecutter.project_slug}}/src/config/settings/environments/: ci.py  dev.py  prod.py
{{cookiecutter.project_slug}}/tests/: conftest.py  factories.py  utils.py
{{cookiecutter.project_slug}}/tests/api/integration/: conftest.py  cors_test.py  csp_test.py  docs_gating_test.py  docs_test.py  health_test.py  jwt_test.py  permissions_policy_test.py  ready_test.py  request_id_test.py  schema_test.py  throttling_test.py  versioning_test.py
{{cookiecutter.project_slug}}/tests/api/unit/: api_test.py  auth_test.py  export_openapi_schema_test.py  pagination_test.py  throttling_test.py
{{cookiecutter.project_slug}}/tests/config/unit/: cache_settings_test.py  celery_test.py  deploy_script_test.py  docker_socket_proxy_test.py  media_backup_script_test.py  migrations_script_test.py  postgres_backup_script_test.py  prod_compose_test.py  prod_settings_test.py  pyproject_test.py
{{cookiecutter.project_slug}}/tests/core/integration/: admin_test.py  axes_test.py  conftest.py  tokens_test.py
{{cookiecutter.project_slug}}/tests/core/unit/: models_test.py  tasks_test.py
{{cookiecutter.project_slug}}/tests/integration/api/: docs_gating_test.py  docs_test.py  health_test.py  notes_test.py  protected_docs_urls.py  ready_test.py  request_id_test.py  schema_test.py  versioning_test.py
{{cookiecutter.project_slug}}/tests/notes/integration/: admin_test.py  conftest.py  notes_test.py
{{cookiecutter.project_slug}}/tests/notes/unit/: conftest.py  controllers_test.py
{{cookiecutter.project_slug}}/tests/unit/api/: api_test.py  pagination_test.py
{{cookiecutter.project_slug}}/tests/unit/config/: pyproject_test.py
{{cookiecutter.project_slug}}/tests/unit/core/: tasks_test.py
(+12 files in other folders)
