[project]
name = "django-api-template"
version = "0.0.0"
description = "Development toolchain for the django-api-template Cookiecutter repository."
requires-python = ">=3.14,<3.15"

[dependency-groups]
dev = [
    "cookiecutter==2.7.1",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
]

[tool.pytest.ini_options]
python_files = ["*_test.py"]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
package = false
required-version = "==0.11.19"
