[project]
name = "{{ cookiecutter.project_slug }}"
version = "1.0.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "MIT"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
maintainers = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
dependencies = [
{%- if cookiecutter.use_celery != "none" %}
    "celery[redis]==5.6.3",
{%- endif %}
    "django[argon2]==6.0.6",
{%- if cookiecutter.email_provider == "resend" %}
    "django-anymail[resend]==15.0",
{%- endif %}
    "django-axes==8.3.1",
{%- if cookiecutter.use_celery == "worker+beat" %}
    "django-celery-beat==2.9.0",
{%- endif %}
{%- if cookiecutter.use_celery != "none" %}
    "django-celery-results==2.6.0",
{%- endif %}
{%- if cookiecutter.use_cors == "yes" %}
    "django-cors-headers==4.9.0",
{%- endif %}
    "django-environ==0.13.0",
    "django-extra-checks==0.17.0",
    "django-ninja==1.6.2",
    "django-ninja-extra==0.31.5",
{%- if cookiecutter.use_example_api == "yes" and cookiecutter.api_auth == "jwt" %}
    "django-ninja-jwt==5.4.4",
{%- endif %}
    "django-permissions-policy==4.32.0",
    "django-redis==7.0.0",
    "django-split-settings==1.3.2",
    "django-stubs-ext==6.0.5",
{%- if cookiecutter.use_celery != "none" %}
    "django-structlog[celery]==10.1.0",
{%- else %}
    "django-structlog==10.1.0",
{%- endif %}
    "django-unfold==0.96.0",
{%- if cookiecutter.use_celery != "none" %}
    "kombu==5.6.2",
{%- endif %}
    "psycopg[binary]==3.3.4",
{%- if cookiecutter.use_sentry == "yes" %}
    "sentry-sdk==2.64.0",
{%- endif %}
    "structlog==25.5.0",
]

[dependency-groups]
ci = [
    "django-migration-linter==6.0.0",
    "django-stubs==6.0.5",
    "django-zeal==2.2.1",
    "factory-boy==3.3.3",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest-env==1.6.0",
    "pytest-factoryboy==2.8.1",
    "pytest-mock==3.15.1",
    "pytest-randomly==4.1.0",
    "pytest-sugar==1.1.1",
    "pytest-timeout==2.4.0",
    "pytest-xdist==3.8.0",
    "schemathesis==4.21.10",
]
dev = [
    { include-group = "ci" },
    # deptry's upstream pre-commit hook uses language: system, so uv must
    # provide the executable when running generated-project hooks.
    "deptry==0.25.1",
    "django-extensions==4.1",
    "pre-commit==4.6.0",
    "werkzeug==3.1.8",
]
prod = [
{%- if cookiecutter.use_s3_media == "yes" %}
    "django-storages[s3]==1.14.6",
{%- endif %}
    "gunicorn==26.0.0",
    "uvicorn-worker==0.4.0",
    "whitenoise==6.12.0",
]

[tool.coverage.run]
branch = true
omit = [
    # Production ASGI entrypoint, exercised only by Gunicorn at runtime; the
    # API contract test loads config.wsgi instead (see schema_test.py).
    "src/config/asgi.py",
{%- if cookiecutter.use_sentry == "yes" %}
    "src/config/settings/components/sentry.py",
{%- endif %}
    "src/config/settings/environments/dev.py",
    "src/config/settings/environments/prod.py",
]

[tool.deptry]
known_first_party = ["apps", "config"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    # Loaded via INSTALLED_APPS in settings/components/apps.py.
    "django-axes",
{%- if cookiecutter.email_provider == "resend" %}
    # Loaded via INSTALLED_APPS and the EMAIL_BACKEND dotted path.
    "django-anymail",
{%- endif %}
{%- if cookiecutter.use_celery == "worker+beat" %}
    # Loaded via INSTALLED_APPS in settings/components/apps.py.
    "django-celery-beat",
{%- endif %}
{%- if cookiecutter.use_celery != "none" %}
    # Loaded via INSTALLED_APPS in settings/components/apps.py.
    "django-celery-results",
{%- endif %}
{%- if cookiecutter.use_cors == "yes" %}
    # Loaded via INSTALLED_APPS and MIDDLEWARE in settings/components.
    "django-cors-headers",
{%- endif %}
    # Loaded via INSTALLED_APPS in settings/components/apps.py.
    "django-extra-checks",
{%- if cookiecutter.use_example_api == "yes" and cookiecutter.api_auth == "jwt" %}
    # Loaded via INSTALLED_APPS in settings/components/apps.py.
    "django-ninja-jwt",
{%- endif %}
    # Loaded via MIDDLEWARE in settings/components/middleware.py.
    "django-permissions-policy",
    # Used by Django's PostgreSQL backend configured from DATABASE_URL.
    "psycopg",
]
DEP003 = [
    # Imported for RedisError in apps/api/routes/ready.py; provided by django-redis.
    "redis",
]

[tool.django_migration_linter]
include_apps = ["core"{% if cookiecutter.use_example_api == "yes" %}, "notes"{% endif %}]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
addopts = "--cov=src --cov=tests --cov-fail-under=100 --cov-report=term-missing:skip-covered --numprocesses=auto --strict-config --strict-markers"
env = [
    "ALLOWED_HOSTS=localhost,testserver",
    "CACHE_URL=locmemcache://",
{%- if cookiecutter.use_cors == "yes" %}
    "CORS_ALLOWED_ORIGINS=https://app.example.test",
{%- endif %}
    "D:DATABASE_URL=postgres://{{ cookiecutter.project_slug.replace('-', '_') }}:{{ cookiecutter.project_slug.replace('-', '_') }}@localhost:5432/{{ cookiecutter.project_slug.replace('-', '_') }}",
{%- if cookiecutter.email_provider != "none" %}
    "DEFAULT_FROM_EMAIL=noreply@example.test",
{%- endif %}
    "DJANGO_ENV=ci",
    "SECRET_KEY=mock-secret-key-0123456789-abcdefghijklmnopqrstuvwxyz",
]
filterwarnings = [
    "error",
]
markers = [
    "integration: tests that exercise integrated framework behavior",
    "unit: tests that exercise isolated units",
]
python_files = ["*_test.py"]
pythonpath = ["src"]
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"
xfail_strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D1",
    "D203",
    "D212",
    "E501",
    "FIX001",
    "FIX002",
    "TC001",
    "TC003",
    "TD001",
    "TD002",
    "TD003",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-decorators = [
    "ninja.NinjaAPI.delete",
    "ninja.NinjaAPI.get",
    "ninja.NinjaAPI.patch",
    "ninja.NinjaAPI.post",
    "ninja.NinjaAPI.put",
    "ninja.Router.delete",
    "ninja.Router.get",
    "ninja.Router.patch",
    "ninja.Router.post",
    "ninja.Router.put",
    "ninja_extra.http_delete",
    "ninja_extra.http_get",
    "ninja_extra.http_post",
    "ninja_extra.http_put",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"tests/api/unit/throttling_test.py" = ["S603"]
"tests/config/unit/prod_settings_test.py" = ["S603"]

[tool.ty.environment]
python = ".venv"

[tool.ty.src]
exclude = [".agents"]

[tool.uv]
default-groups = ["dev"]
